[package]
name = "hub75-pio"
version = "0.1.0"
edition = "2021"
description = "A HUB75 driver for RP2040. Utilizes PIO and DMA to achieve zero CPU overhead."
license = "MIT"

[dependencies]
pio-proc = "^0.2"
pio = "^0.2"
libm = "0.2"

rp2040-hal = "0.8"
embedded-graphics = "^0.8"

# TODO: Remove once https://github.com/rp-rs/pio-rs/pull/47 is merged
num_enum = { version="0.6.0", default-features = false }
